from GUI.views.View import View

class StartView(View):
    def __init__(self):
        super().__init__("start.ui")